flux/apps/local/egress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: egress
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
